Sculpt Mode: Mask brush smoothing is broken #112285

Closed
opened 2023-09-12 15:38:07 +02:00 by Julien Kaspar · 1 comment
Member

System Information
Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-b492f73f87)

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-11 20:52, hash: dd9f196c2e2e
Worked: (newest version of Blender that worked as expected)

Short description of error
Holding Shift while using the Mask brush is meant to smooth the mask instead of the geometry.
The issue is that it now instead smooths the geometry and after the stroke switches the 'Mask Tool' brush setting to 'Smooth' instead.

Exact steps for others to reproduce the error

  • Switch to Sculpt Mode
  • Use the Mask Brush with LMB
  • Hold Shift and LMB to smooth the mask (this is now smoothing the geometry and afterwards switching the brush setting to 'Smoth')
  • Now use LMB to paint a mask (instead it now smooths the mask)
**System Information** Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-b492f73f87) **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-11 20:52, hash: `dd9f196c2e2e` Worked: (newest version of Blender that worked as expected) **Short description of error** Holding `Shift` while using the Mask brush is meant to smooth the mask instead of the geometry. The issue is that it now instead smooths the geometry and after the stroke switches the 'Mask Tool' brush setting to 'Smooth' instead. **Exact steps for others to reproduce the error** - Switch to Sculpt Mode - Use the Mask Brush with `LMB` - Hold `Shift` and `LMB` to smooth the mask (this is now smoothing the geometry and afterwards switching the brush setting to 'Smoth') - Now use `LMB` to paint a mask (instead it now smooths the mask)
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-12 15:38:07 +02:00
Member

Can confirm, will check, cc01bb83f6 might be the culprit...

Can confirm, will check, cc01bb83f63b9299a7baa0d9eba4f7a48a0a87b7 might be the culprit...
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-12 16:02:35 +02:00
Philipp Oeser self-assigned this 2023-09-12 16:02:40 +02:00
Philipp Oeser added
Module
Sculpt, Paint & Texture
Priority
High
and removed
Priority
Normal
labels 2023-09-12 16:02:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-13 11:05:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112285
No description provided.