Fix #112285: Sculpt Mode: Mask brush smoothing is broken

Mistake in cc01bb83f63b9299a7baa0d9eba4f7a48a0a87b7.

Above commit tried to be smart about early out, but wasnt.
Now corrected.

NOTE: fix needs to go into 3.6 LTS