source/blender/editors/sculpt_paint/sculpt.cc
@@ -4299,6 +4299,7 @@ static void smooth_brush_toggle_on(const bContext *C, Paint *paint, StrokeCache 
   if (cur_brush->sculpt_tool == SCULPT_TOOL_MASK) {
     cache->saved_mask_brush_tool = cur_brush->mask_tool;
     cur_brush->mask_tool = BRUSH_MASK_SMOOTH;
+    return;
   }
   else if (ELEM(cur_brush->sculpt_tool,
                 SCULPT_TOOL_SLIDE_RELAX,
@@ -4335,6 +4336,7 @@ static void smooth_brush_toggle_off(const bContext *C, Paint *paint, StrokeCache
 
   if (brush->sculpt_tool == SCULPT_TOOL_MASK) {
     brush->mask_tool = cache->saved_mask_brush_tool;
+    return;
   }
   else if (ELEM(brush->sculpt_tool,
                 SCULPT_TOOL_SLIDE_RELAX,
@@ -4343,6 +4345,7 @@ static void smooth_brush_toggle_off(const bContext *C, Paint *paint, StrokeCache
                 SCULPT_TOOL_SMEAR))
   {
     /* Do nothing. */
+    return;
   }
 
   /* If saved_active_brush_name is not set, brush was not switched/affected in
